--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
